<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ListadoActivity"
    android:background="@color/fondo">

    <include
        android:id="@+id/toolbar_listado"
        layout="@layout/toolbar_listado" />

    <LinearLayout
        android:id="@+id/linear_cabecera_tabla_motos"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/cabecera"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:layout_below="@id/toolbar_listado">

        <TextView
            android:layout_width="32dp"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/marca" />
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/modelo" />
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/km" />
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/year" />
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/precio" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lista_motos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_cabecera_tabla_motos"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp" />




</RelativeLayout>