<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/layout_ficha"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FichaActivity"
    android:background="@color/fondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ci_logo_ficha_cv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/icon_back"
                    android:onClick="irListado"/>

                <TextView
                    android:id="@+id/title_insertUpdateFicha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="2dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/tvAddItem"
                        android:text="@string/marca" />

                    <TextView
                        style="@style/tvAddItem"
                        android:text="@string/modelo" />

                    <TextView
                        style="@style/tvAddItem"
                        android:text="@string/km" />

                    <TextView
                        style="@style/tvAddItem"
                        android:text="@string/year" />

                    <TextView
                        style="@style/tvAddItem"
                        android:text="@string/cilindrada" />

                    <TextView
                        style="@style/tvAddItem"
                        android:text="@string/potencia" />

                    <TextView
                        style="@style/tvAddItem"
                        android:text="@string/precio" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner_marca_ficha"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"/>

                    <EditText
                        android:id="@+id/modelo_ficha"
                        style="@style/etAddItem" />

                    <EditText
                        android:id="@+id/km_ficha"
                        style="@style/etAddItem" />

                    <EditText
                        android:id="@+id/anio_ficha"
                        style="@style/etAddItem" />

                    <EditText
                        android:id="@+id/cc_ficha"
                        style="@style/etAddItem" />

                    <EditText
                        android:id="@+id/cv_ficha"
                        style="@style/etAddItem" />

                    <EditText
                        android:id="@+id/precio_ficha"
                        style="@style/etAddItem" />

                </LinearLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/vendido_ficha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vendido"
                android:textColor="#EF5350"
                android:textSize="20sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_updateFicha"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/design_btn"
                    android:text="@string/btn_update"
                    android:textColor="@color/white"
                    android:onClick="insertUpdateFicha"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_inserFicha"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:background="@drawable/design_btn"
                    android:text="@string/btn_insert"
                    android:textColor="@color/white"
                    android:onClick="insertUpdateFicha"/>

            </LinearLayout>




        </LinearLayout>


    </ScrollView>

</RelativeLayout>