<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EliminarActivity"
    android:background="@color/fondo">

    <ImageButton
        android:id="@+id/btn_atras_eliminar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/transparent"
        android:onClick="irListado"
        android:src="@drawable/icon_back" />

    <LinearLayout
        android:id="@+id/linear_cabecera_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cabecera"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_below="@+id/btn_atras_eliminar">
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/marca"/>
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/modelo"/>
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/km"/>
        <TextView
            style="@style/CabeceraMotos"
            android:text="@string/year"/>
        <TextView
            android:layout_width="35dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_cabecera_delete"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp" />


</RelativeLayout>